app/assets/stylesheets/work.css
.navbar-header img {
  height: 4em;
}
.navbar-brand {
  float: left;
}
.volume {
  margin-top: 17em;
  padding-left: 5em;
}
.intro-body .icon.ion-ios-volume-high {
  font-size: 45px;
  color: rgba(255,255,255,.25);
}
.top-nav-collapse {
  background-color: rgba(8, 12, 18, 0.9);
}
#navbar {
  width: 75%;
  text-align: right;
  min-width: 500px;
  margin: 1% auto 0 auto;
  padding: 0;
  z-index: 10000000001;
  position: fixed;
  top: 0;
}

#navbar:after {
  content: '';
  display: inline-block;
  width: 100%;
}

#navbar li  {
  display: inline-block;
}
#navbar li a {
  color: rgba(255, 255, 255, 0.6);
  font-size: 15px;
}
a:focus, a:hover {
  text-decoration: none;
}
.work-body {
  background-color: #e5e5e5;
}
#about {
  background-color: #090e14;
  padding-bottom: 0em;
  padding-top: 0em;
}
.list-horizontal {
  margin-right: 35px;
  font-size: 0px;
}
.list-horizontal li {
	display: inline-block;
}
.list-horizontal li:before {
	content: '\00a0\2022\00a0\00a0';
	color: #fff;
	font-size: 20px;
}
#about .heading {
  margin-top: 2em;
}
#about .container {
  padding-top: 4em;
  padding-bottom: 5em;
}
#about h2 {
  color: rgba(255, 255, 255, 0.86);
  font-size: 32px;
}
#about h3 {
  color: rgba(255, 255, 255, 0.86);
  font-size: 20px;
  margin-top: 0px;
}
#about h4 {
  /*font-family: '.tk-adobe-garamond-prodelete';
  -webkit-font-smoothing: antialiased;
  font-weight: normal;*/
}
#work-text {
  height: 20em;
  background-color: #e5e5e5;
  color: black !important;
  padding-top: 10em;
  padding-bottom: 10em;
}
#work-text h2 {
  font-size: 32px;
  color: #636363;
}
#work-text h3{
  font-size: 20px;
  color: #636363;
}
#portfolio {
  color: #636363;
  height: 65em;
}
#portfolio h1 {
  font-family: 'myriad-set-pro_text';
  font-weight: 900 !important;
  letter-spacing: 2px;
}
#portfolio img {
  box-shadow:         9px 10px 15px 3px rgba(0, 0, 0, 0.2);
  -moz-box-shadow:    9px 10px 15px 3px rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 9px 10px 15px 3px rgba(0, 0, 0, 0.2);
  text-align: center;
}
#portfolio img:hover {
  cursor:pointer;
}
#portfolio h3 {
  text-align: center;
  font-size: 20px;
  line-height: 40px;
}
#portfolio h2 {
  /*font-family: '.tk-adobe-garamond-prodelete';
  -webkit-font-smoothing: antialiased;
  font-size: 1.35em;
  font-weight: normal;*/
  font-family: 'myriad-set-pro_ultralight';
  font-size: 1.35em;
  margin-bottom: 20px;
  margin-top: 15px;
}
#portfolio .display {
padding-top: 10em;
}
#portfolio p {
  /*font-family: '.tk-adobe-garamond-prodelete';
  -webkit-font-smoothing: antialiased;
  font-size: 1.35em;*/
  font-family: 'myriad-set-pro_thin';
  font-size: 1.35em;
}
.portfolio-1 {
  /*background-color: #21364b;*/
  background-color: #e5e5e5;
}
.portfolio-1 h1 {
  color: #636363;
}
.portfolio-1 h2 {
  color: #77a1ae;
}
.portfolio-1 p {
  color: #636363;
}
.portfolio-1 .col-lg-12 {
  color: #fff;
  padding-top: 5em;
  padding-bottom: 0em;
}
.portfolio-1 .info {
  color: #e4f5fb;
  line-height: 3em;
  margin-top: 1em;
}
.modal {
  margin-top: 100px;
}
.portfolio-2 {
  /*background-color: #171717;*/
  background-color: #e5e5e5;
}
.portfolio-2 h1 {
  font-weight: 900 !important;
  color: #6f6f6f;
}
.portfolio-2 h2 {
  color: #728791;
}
.portfolio-2 p {
  color: #6f6f6f;
}
.portfolio-2 .col-lg-12 {
  padding-top: 5em;
  padding-bottom: 0em
}
.portfolio-2 .info {
  text-align: center;
  margin-top: 1em;
}
.portfolio-3 {
  background-color: #e5e5e5;
}
.portfolio-3 h1 {
  color: #636363;
}
.portfolio-3 h2 {
  color: #8399b3;
}
.portfolio-3 p {
  color: #636363;
}
.portfolio-3 .col-lg-12 {
  padding-top: 5em;
  padding-bottom: 0em
}
.portfolio-3 .info {
  text-align: center;
  margin-top: 1em;
}
.portfolio-4 {
  background-color: #e5e5e5;
  padding-bottom: 75em;
}
.portfolio-4 h1 {
  color: #636363;
}
.portfolio-4 h2 {
  color: #587272;
}
.portfolio-4 p {
  color: #636363;
}
.portfolio-4 .col-lg-12 {
  padding-top: 5em;
  padding-bottom: 0em
}
.portfolio-4 .info {
  text-align: center;
  margin-top: 1em;
}
.modal-open .modal {
  background-color: rgba(8, 12, 18, 0.9);
}

